--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -43,7 +43,9 @@
                             <div class="section-title">
                             <h3 class="wow fadeInUp">about us</h3>
                             <h2 class="text-anime-style-2" data-cursor="-opaque">We Are The Best For <span>Physiotherapy</span></h2>
-                            <p class="wow fadeInUp" data-wow-delay="0.25s">We understand that injuries and acute pain can happen unexpectedly. Our emergency physiotherapy services are designed to provide prompt and effective care to help you manage pain, prevent further injury, and start your recovery process as quickly as possible.</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.25s">Astha Therapy Centre is a complete Autism & Neurodevelopment Rehabilitation Centre. Our aim is to promote an environment where all people (children & Adult) with special need or any kind of neurodevelopment disorder can get equal opportunity/access to Health, Education, Rehabilitation, Recreation, Employment, Information & Social security and Social night. </p>
+                            <p class="wow fadeInUp" data-wow-delay="0.35s">This centre provides a nurturing, modern & need based equipment, evidenced based practices and supportive environment where individuals with special needs can thrive, learn, and reach their full potential.</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.35s">This centre provides a nurturing, modern & need based equipment, evidenced based practices and supportive environment where individuals with special needs can thrive, learn, and reach their full potential.At Astha our motivation & foremost priority is to try & ensure that these children can grew up to lead as normal lives as possible.
                             </div>
                         <!-- Section Title End -->
 
@@ -237,7 +239,9 @@
                         <!-- Mva Content Start -->
                         <div class="mva-item-content">
                             <h3>our mission</h3>
-                            <p>We understand that injuries and acute pain can  unexpectedly. Our emergency that injuries and acute pain can  unexpectedly. Our emergency physiotherapy.derstand that injuries and acute pain can  unexpectedly.</p>
+                            <p>1. To provide best and actual Services for all children with special need and any kind of neurodevelopment disorder</p>
+                            <p>2. To provide training program for parent/teacher/Professionals.</p>
+                            <p>3. To develop one-stop services centre for neurodevelopment disorders & Special need children.</p>
                         </div>
                         <!-- Mva Content End -->
                     </div>
@@ -256,7 +260,7 @@
                         <!-- Mva Content Start -->
                         <div class="mva-item-content">
                             <h3>our vision</h3>
-                            <p>We understand that injuries and acute pain can  unexpectedly. Our emergency that injuries and acute pain can  unexpectedly. Our emergency physiotherapy.derstand that injuries and acute pain can  unexpectedly.</p>
+                            <p>Our aim is to promote an environment where all people (children & Adult) with special need or any kind of neurodevelopment disorder can get equal opportunity/access to Health, Education, Rehabilitation, Recreation, Employment, Information & Social security and Social night. </p>
                         </div>
                         <!-- Mva Content End -->
                     </div>
